fix: add a little more gap

--- a/style/output.css
+++ b/style/output.css
@@ -752,12 +752,12 @@ video {
   row-gap: 0.5rem;
 }
 
-.gap-y-4 {
-  row-gap: 1rem;
-}
-
 .gap-y-6 {
   row-gap: 1.5rem;
+}
+
+.gap-y-8 {
+  row-gap: 2rem;
 }
 
 .rounded-full {
